--- a/lpwan.html
+++ b/lpwan.html
@@ -165,6 +165,7 @@ Low-Power Wide-Area Networks (LP-WANs) aim to provide wireless connectivity at e
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>Joltik: Enabling Energy-Efficient "Future-Proof" Analytics on Low-Power Wide-Area Networks</strong>, Mingran Yang, Junbo Zhang, Akshay Gadre, Zaoxing Liu, Swarun Kumar and Vyas Sekar, MobiCom  2020 [<a href="papers/joltik-mobicom2020.pdf">PAPER</a>] [<a href="joltik.html">WEBSITE</a>]<br /></li>
 <li><strong>A Cloud-Optimized Link Layer for Low-Power Wide-Area Networks</strong>, Artur Balanuta, Nuno Pereira, Swarun Kumar and Anthony Rowe, MobiSys  2020 [<a href="papers/opr-mobisys2020.pdf">PAPER</a>] [<a href="opr.html">WEBSITE</a>]<br /></li>
 <li><strong>Poster: Does Ambient RF Energy Suffice to Power Battery-free IoT?</strong>, Atul Bansal, Swarun Kumar and Bob Iannucci, MobiSys  2020 [<a href="wira.html">WEBSITE</a>]<br /></li>
 <li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
