--- a/openrf.html
+++ b/openrf.html
@@ -159,7 +159,7 @@ Recent cross-layer MIMO systems have promised significant throughput gains. Yet,
 </div>
 <div class="6u 12u(mobile)"> <section>
 <strong><h4 style="margin-left:0px">Code</h4></strong>
-    The code for OpenRF is available at: [<a href="https://www.andrew.cmu.edu/user/swarunk/new/openrfcode.html">LINK</a>]
+    The code for OpenRF is available at: [<a href="https://www.swarunkumar.com/openrfcode.html">LINK</a>]
 
 </section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
